--- a/source/webapp/templates/articles/article_detail.html
+++ b/source/webapp/templates/articles/article_detail.html
@@ -28,6 +28,16 @@
                     Нет ни одного тега
                 {% endfor %}
             </p>
+            <button class="btn btn-primary article-like-button" 
+                    data-article-id="{{ article.id }}" 
+                    data-is-liked="{% if user in article.article_likes.all %}true{% else %}false{% endif %}">
+                {% if user in article.article_likes.all %}
+                    <i class="bi bi-heart-fill"></i>
+                {% else %}
+                    <i class="bi bi-heart"></i>
+                {% endif %}
+            </button>
+            <span class="likes-count">{{ article.likes_count }}</span>
         </div>
     </div>
     {% if comments.exists %}
@@ -36,6 +46,17 @@
             <p>{{ comment.text }}</p>
             <p>{{ comment.author }}</p>
             <p>{{ comment.created_at|date:"Y-m-d h:m:s" }}</p>
+            <button class="btn btn-primary comment-like-button" 
+                    data-comment-id="{{ comment.id }}" 
+                    data-is-liked="{% if user in comment.comment_likes.all %}true{% else %}false{% endif %}">
+                {% if user in comment.comment_likes.all %}
+                    <i class="bi bi-heart-fill"></i>
+                {% else %}
+                    <i class="bi bi-heart"></i>
+                {% endif %}
+            </button>
+            <span class="likes-count">{{ comment.likes_count }}</span>
+            
             <a href="{% url "webapp:update_comment" comment.pk %}"
                                class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
             <a href="{% url "webapp:delete_comment" comment.pk %}" class="btn btn-primary"><i
