--- a/source/webapp/templates/partial/articles_list.html
+++ b/source/webapp/templates/partial/articles_list.html
@@ -15,7 +15,17 @@
                     <div class="btn-group" role="group">
                         <a href="{{ article.get_absolute_url }}" class="btn btn-primary"><i
                                 class="bi bi-blockquote-right"></i></a>
-                        <a href="#" class="btn btn-primary"><i class="bi bi-heart"></i></a>
+                        <button class="btn btn-primary article-like-button" 
+                            data-article-id="{{ article.id }}" 
+                                data-is-liked="{% if user in article.article_likes.all %}true{% else %}false{% endif %}">   
+                            {% if user in article.article_likes.all %}
+                                <i class="bi bi-heart-fill"></i>
+                            {% else %}
+                                <i class="bi bi-heart"></i>
+                            {% endif %}
+                        </button>
+                        <span class="likes-count">{{ article.likes_count }}</span>
+
                         {% if perms.webapp.change_article or request.user == article.author %}
                             <a href="{% url "webapp:update_article" article.pk %}"
                                class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
